added hopefully perfect files

--- a/css/sophiekremer-werkschau.webflow.css
+++ b/css/sophiekremer-werkschau.webflow.css
@@ -925,10 +925,10 @@ img {
   -ms-flex-item-align: stretch;
   -ms-grid-row-align: stretch;
   align-self: stretch;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
   border-style: solid;
   border-width: 0.5px;
   border-color: rgba(0, 0, 0, 0.15);
