--- a/css/sophiekremer-werkschau.webflow.css
+++ b/css/sophiekremer-werkschau.webflow.css
@@ -1815,6 +1815,10 @@ img {
 
 .image-76 {
   height: 100%;
+  -webkit-align-self: stretch;
+  -ms-flex-item-align: stretch;
+  -ms-grid-row-align: stretch;
+  align-self: stretch;
   -webkit-box-flex: 0;
   -webkit-flex: 0 0 auto;
   -ms-flex: 0 0 auto;
@@ -2091,6 +2095,31 @@ img {
   border-width: 0.5px;
   border-color: rgba(0, 0, 0, 0.15);
   border-radius: 6px;
+}
+
+.grid-element-fullwidth {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -o-object-fit: cover;
+  object-fit: cover;
 }
 
 @media screen and (min-width: 1280px) {
@@ -2450,6 +2479,25 @@ img {
     -ms-grid-rows: minmax(auto, 1fr) minmax(auto, auto);
     grid-template-rows: minmax(auto, 1fr) minmax(auto, auto);
   }
+
+  .grid-element-fullwidth {
+    height: 100%;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-align-self: baseline;
+    -ms-flex-item-align: baseline;
+    align-self: baseline;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+  }
 }
 
 @media screen and (max-width: 991px) {
@@ -2795,6 +2843,14 @@ img {
     top: -69px;
     font-size: 84px;
     line-height: 110px;
+  }
+
+  .grid-element-fullwidth {
+    position: relative;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
 }
 
@@ -3363,6 +3419,12 @@ img {
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
+  }
+
+  .grid-element-fullwidth {
+    position: relative;
+    padding-right: 12px;
+    padding-left: 12px;
   }
 }
 
